[package]
name = "congregation"
version = "0.1.0"
edition = "2021"
description = "Run multiple parallel tasks with grouped output"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/someever/congregation"

[dependencies]
crossterm = "0.29.0"
indoc = "2.0.6"
ctrlc = { version = "3.4.7", features = ["termination"] }
nix = { version = "=0.30.1", features = ["term"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "process", "sync"] }
