[package]
name = "congregation"
version = "0.1.8"
edition = "2021"
description = "Run multiple parallel tasks with grouped output"
license = "MIT"
repository = "https://github.com/somenever/congregation"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "runner", "parallel", "task", "utitlity"]

[dependencies]
crossterm = "0.29.0"
indoc = "2.0.6"
ctrlc = { version = "3.4.7", features = ["termination"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "process", "sync"] }
dunce = "1.0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.30.1", features = ["term"] }
