[package]
name = "congregation"
version = "0.2.0"
edition = "2021"
description = "Run multiple parallel tasks with grouped output"
license = "MIT"
repository = "https://github.com/somenever/congregation"
categories = ["command-line-utilities", "development-tools"]
keywords = ["command-line", "runner", "parallel", "task", "utitlity"]

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
indoc = "2.0.6"
ctrlc = { version = "3.4.7", features = ["termination"] }
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "io-util", "macros", "process", "sync"] }
dunce = "1.0.5"
tokio-stream = "0.1.17"

[target.'cfg(unix)'.dependencies]
nix = { version = "=0.30.1" }
